Added Create Mechanical Extruder (will be removing Cobblegen Galore in next update).
Added Repeatable Trial Vaults.

Added create mechanical extruder recipes.

Removed Gateways to Eternity.

Updated Almost Unified.
Updated Apothic Attributes.
Updated Applied Energistics 2.
Updated Balm.
Updated Create.
Updated Create Mechanical Extruder.
Updated Create Sifting.
Updated Cucumber Library.
Updated Default World Type [Forge].
Updated Entity Culling Fabric/Forge.
Updated FTB Filter System.
Updated FTB Library (Forge).
Updated FTB Quests (Forge).
Updated FTB Ultimine (Forge).
Updated FTB XMod Compat.
Updated Generator Galore.
Updated GuideME.
Updated Immersive Engineering.
Updated Jade 🔍.
Updated JourneyMap.
Updated Just Enough Items (JEI).
Updated LootJS: KubeJS Addon.
Updated Mechanicals Lib.
Updated ModernFix.
Updated Moonlight Lib.
Updated Mystical Agradditions.
Updated Mystical Agriculture.
Updated Pam's HarvestCraft 2 - Food Core.
Updated Pam's HarvestCraft 2 - Trees.
Updated Placebo.
Updated Puzzles Lib.
Updated Smarter Farmers (farmers replant).
Updated Sophisticated Backpacks.
Updated Sophisticated Core.
Updated Sophisticated Storage.
Updated Visual Workbench.
Updated Waystones.

1.21.1-1.0
Removed Cobblegen Galore.

Readded LootJS: KubeJS Addon.

Updated Applied Energistics 2.
Updated Create Crafts & Additions.
Updated Cucumber Library.
Updated Farmer's Delight.
Updated FTB Filter System.
Updated FTB Library (Forge).
Updated FTB Quests (Forge).
Updated FTB Teams (Forge).
Updated FTB Ultimine (Forge).
Updated FTB XMod Compat.
Updated Moonlight Lib.
Updated Mystical Agradditions.
Updated Mystical Agriculture.
Updated Pam's HarvestCraft 2 - Food Core.
Updated Placebo.
Updated Puzzles Lib.
Updated Rhino.
Updated Sophisticated Backpacks.
Updated Sophisticated Core.
Updated Sophisticated Storage.

Updated Alpha (Overworld) Questline.
Updated Beta (Create) Questline.
Updated Gamma (Mystical Agriculture) questline.
Updated Pam's Harvestcraft questline.